# EdgeLLM

./: .env.example  .gitignore  API_DOCUMENTATION.md  Dockerfile  README.md  docker-compose.yml  main.py  requirements.txt
frontend/: README.md
mojo-gateway/: .dockerignore  .env.example  .gitignore  BENCHMARK_PLAN.md  BENCHMARK_REPORT.md  Dockerfile  Dockerfile.bitnet  Dockerfile.mojo  FLASH_ATTENTION_BENCHMARK_REPORT.md  IMPLEMENTATION_PLAN.md  PAPER_ROADMAP.md  README.md  README_TMAC.md  docker-compose.mojo.yml  docker-compose.yml  fly.benchmark.toml  mojoproject.toml  pixi.toml  pyproject.toml
mojo-gateway/.claude/: CLAUDE.md  SKILL.md
mojo-gateway/benchmarks/: benchmark_results.json  model_benchmark.py  model_benchmark_results.json  quality_metrics.py  run_all_benchmarks.py
mojo-gateway/docs/: BITNET_LEARNINGS.md  cpu_register_optimization.md  optimization_roadmap.md
mojo-gateway/notebooks/: cuda_inference_test.ipynb  finetune_colab.ipynb  flash_attention_benchmark.ipynb  flash_attention_v2_benchmark.ipynb  ollama_qwen_benchmark.ipynb  phase2_1_optimized_benchmark.ipynb
mojo-gateway/results/: comparison_20260111_071006.json  edgellm_real_benchmark.json  ollama_benchmark.json
mojo-gateway/scripts/: convert_bitnet_to_tmac.py  convert_tmac_to_tm2.py  export_qwen.py  full_benchmark.sh  quantize.py  run_benchmark.sh
mojo-gateway/src/: __init__.mojo  bitnet_server_simd.mojo  bitnet_tmac.mojo  bitnet_tmac_lut.mojo  edgellm_gpu.mojo  edgellm_inference.mojo  llama2_quant.mojo  llama2_simd.mojo  main.mojo  router.mojo  simd_inference_demo.mojo  test_unsafe.mojo
(+56 files in other folders)
