[project]
authors = [{name = "umerkhan95", email = "96595386+umerkhan95@users.noreply.github.com"}]
dependencies = []
name = "mojo-gateway"
requires-python = ">= 3.11"
version = "0.1.0"

[build-system]
build-backend = "hatchling.build"
requires = ["hatchling"]

[tool.pixi.workspace]
channels = ["https://conda.modular.com/max-nightly", "conda-forge"]
platforms = ["osx-64"]

[tool.pixi.pypi-dependencies]
mojo_gateway = { path = ".", editable = true }

[tool.pixi.tasks]
